--- a/src/app/componentes/pagina/pagina.component.css
+++ b/src/app/componentes/pagina/pagina.component.css
@@ -1,3 +1,18 @@
-seletor {
-    border: 10px solid #f00;
+.fundo {
+    background-color: black;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
+
+.homepage-container {
+    margin: 1rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: darkgray;
+  }
