--- a/src/app/componentes/pagina/pagina.component.html
+++ b/src/app/componentes/pagina/pagina.component.html
@@ -1,3 +1,12 @@
 <section class="fundo">
-    <div class="homepage-container"></div>
+    <div class="homepage-container homepage-flex">
+        <div class="exemplo-logo"></div>
+        <p class="exemplo-bordao">Algum texto poderia ser escrito aqui</p>
+        <div class="container-box">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <div class="exemplo-botao botao-texto">Entrar</div>
+    </div>
 </section>
