--- a/src/app/componentes/pagina/pagina.component.html
+++ b/src/app/componentes/pagina/pagina.component.html
@@ -1,7 +1,7 @@
 <section class="fundo">
     <div class="homepage-container homepage-flex">
         <div class="exemplo-logo"></div>
-        <p class="exemplo-bordao">Algum texto</p>
+        <p class="exemplo-bordao">Algum texto aqui</p>
         <div class="container-box">
             <div class="box"></div>
             <div class="box"></div>
