--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -1,3 +1,30 @@
 <div class="container">
-<p>homepage works!</p>
+
+    <nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link h5 mb-0" href="#">Visto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link h5 mb-0" href="#">Vendo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link h5 mb-0" href="#">Quero ver</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link h5 mb-0" href="#">Abandonados</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link h5 mb-0" href="#">Guilty Pleasure</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link h5 mb-0" href="#">Favoritos</a>
+            </li>
+        </ul>
+    </nav>
+
+    <section>
+        <h2>Top 10</h2>
+    </section>
+
 </div>
