Consertado Navbar e SVG do poster

--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -1,26 +1,38 @@
 <div class="container">
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light justify-content-center">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link h5 mb-0" href="#">Visto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link h5 mb-0" href="#">Vendo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link h5 mb-0" href="#">Quero ver</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link h5 mb-0" href="#">Abandonados</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link h5 mb-0" href="#">Guilty Pleasure</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link h5 mb-0" href="#">Favoritos</a>
-            </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <div class="container">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#BarraNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-center" id="BarraNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Visto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Vendo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Quero ver</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Abandonados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Guilty Pleasure</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Favoritos</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
     </nav>
 
     <section class="bg-light rounded mt-2 px-3">
@@ -33,8 +45,8 @@
             </ul>
 
             <!-- Slides -->
-            <div>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 600 1000" style="enable-background:new 0 0 600 1000;" xml:space="preserve">
+            <div class="pb-1">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 600 1000" width="20rem"  style="enable-background:new 0 0 600 1000;" xml:space="preserve">
                     <style type="text/css">
                         .st0{fill:url(#XMLID_4_);}
                         .st1{fill:#FFFFFF;}
@@ -49,7 +61,7 @@
                             <stop offset="0.7182" style="stop-color:#7E7E7E"/>
                             <stop offset="0.8417" style="stop-color:#969696"/>
                         </linearGradient>
-                        <rect id="XMLID_1_" class="st0" width="600" height="1000"/>
+                        <rect id="XMLID_1_" class="st0" width="100%" height="100%"/>
                     </g>
                     <g id="Camada_2">
                         <text id="XMLID_2_" transform="matrix(1 0 0 1 183.3254 423.2556)"><tspan x="0" y="0" class="st1 st2 st3">POSTER</tspan><tspan x="67.9" y="86.4" class="st1 st2 st3">DO</tspan><tspan x="26.9" y="172.8" class="st1 st2 st3">FILME</tspan></text>
