Adicionado pasta images e alterado SVG para PNG

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
-    <a>
-        <svg></svg>
+    <a href="#">
+        <img src="\assets\images\Isotipo-Spotlights-Branco-Contorno.png">
     </a>
 </header>
 
