Adicionado Header e elementos do mesmo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
-<header>
-    <a href="#">
-        <img src="\assets\images\Isotipo-Spotlights-Branco-Contorno.png">
-    </a>
-</header>
+<div class="container">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom bg-white">
+        <a class="d-flex align-items-center col-md-3 mb-3 mb-md-0 text-dark text-decoration-none" href="#">
+            <img class="bi me-2" src="\assets\images\Isotipo-Spotlights-Preto.png" width="40">
+            <span class="fs-4">Spotlights</span>
+        </a>
+        <div class="nav col-12 col-md-auto mb-3 mb-md-0 justify-content-center bg-info">
+            <form class="w-100 me-3">
+                <input type="search" class="form-control" placeholder="pesquisar..." aria-label="Search">
+            </form>
+        </div>
+    </header>
+</div>
 
 <app-homepage></app-homepage>
