--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
 
         <div class="container">
 
@@ -46,27 +46,7 @@
 
             <!-- Slides -->
             <div class="pb-1">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 600 1000" width="20rem"  style="enable-background:new 0 0 600 1000;" xml:space="preserve">
-                    <style type="text/css">
-                        .st0{fill:url(#XMLID_4_);}
-                        .st1{fill:#FFFFFF;}
-                        .st2{font-family:'MyriadPro-Regular';}
-                        .st3{font-size:72px;}
-                    </style>
-                    <g id="Camada_1">
-                        <linearGradient id="XMLID_4_" gradientUnits="userSpaceOnUse" x1="700" y1="900" x2="-100" y2="100">
-                            <stop offset="0.1773" style="stop-color:#323232"/>
-                            <stop offset="0.2907" style="stop-color:#3B3B3B"/>
-                            <stop offset="0.4793" style="stop-color:#555555"/>
-                            <stop offset="0.7182" style="stop-color:#7E7E7E"/>
-                            <stop offset="0.8417" style="stop-color:#969696"/>
-                        </linearGradient>
-                        <rect id="XMLID_1_" class="st0" width="100%" height="100%"/>
-                    </g>
-                    <g id="Camada_2">
-                        <text id="XMLID_2_" transform="matrix(1 0 0 1 183.3254 423.2556)"><tspan x="0" y="0" class="st1 st2 st3">POSTER</tspan><tspan x="67.9" y="86.4" class="st1 st2 st3">DO</tspan><tspan x="26.9" y="172.8" class="st1 st2 st3">FILME</tspan></text>
-                    </g>
-                </svg>
+                <img src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
             </div>
 
             <a>
