Terminado primeira versao do Header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
 <div class="container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom bg-white">
+    <header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 rounded-bottom bg-white">
         <a class="d-flex align-items-center col-md-3 mb-3 mb-md-0 text-dark text-decoration-none" href="#">
             <img class="bi me-2" src="\assets\images\Isotipo-Spotlights-Preto.png" width="40">
-            <span class="fs-4">Spotlights</span>
+            <span class="fs-4 fw-bold">Spotlights</span>
         </a>
-        <div class="nav col-12 col-md-auto mb-3 mb-md-0 justify-content-center bg-info">
-            <form class="w-100 me-3">
-                <input type="search" class="form-control" placeholder="pesquisar..." aria-label="Search">
+        <div class="col-12 col-md-auto mb-3 mb-md-0 justify-content-center">
+            <form class="w-100 me-5">
+                <input type="search" class="form-control" placeholder="Pesquisar" aria-label="Search">
             </form>
+        </div>
+        <div class="col-md-3 text-end">
+            <button class="btn btn-outline-dark me-2">Login</button>
+            <button class="btn btn-dark">Cadastre-se</button>
         </div>
     </header>
 </div>
