--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -4,7 +4,7 @@
 
         <div class="container">
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#BarraNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#BarraNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -35,27 +35,40 @@
 
     </nav>
 
-    <section class="bg-dark rounded mt-2 px-3">
+    <section class="bg-white rounded mt-2 px-3">
         <h2 class="text-muted">Top 10</h2>
-
-        <div id="CarrosselTop10" class="carousel slide" data-ride="carousel"> <!-- Carrossel -->
-            <ul class="carousel-indicators"> <!-- Indicadores -->
-                <li data-target="#CarrosselTop10" data-slide-to="0" class="active"></li>
-                <li data-target="#CarrosselTop10" data-slide-to="1"></li>
-            </ul>
-            <div class="carousel-inner"> <!-- Slides -->
-                <div class="carousel-item active pb-3">
-                    <img class="d-block me-3" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+        
+        <div id="CarouselTop10" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#CarouselTop10" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#CarouselTop10" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#CarouselTop10" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner pb-3">
+                <div class="carousel-item active">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
                 </div>
-                <div class="carousel-item pb-3">
-                    <img class="d-block me-3" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                <div class="carousel-item">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                </div>
+                <div class="carousel-item">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#CarrosselTop10" data-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#CarouselTop10" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                
-            </a>
-            <button class="carousel-control-prev" type="button" data-target="#CarrosselTop10" data-slide="next">
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#CarouselTop10" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Próximo</span>
             </button>
