--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -36,8 +36,8 @@
     </nav>
 
     <section class="bg-white rounded mt-2 px-3">
-        <h2 class="text-muted">Top 10</h2>
-        
+
+        <h2 class="text-muted pt-3">TOP 10</h2>
         <div id="CarouselTop10" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#CarouselTop10" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -69,6 +69,43 @@
                 <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#CarouselTop10" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Próximo</span>
+            </button>
+        </div>
+
+        <h2 class="text-muted pt-3">LANÇAMENTOS</h2>
+        <div id="CarouselLancamentos" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#CarouselLancamentos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#CarouselLancamentos" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#CarouselLancamentos" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner pb-3">
+                <div class="carousel-item active">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                </div>
+                <div class="carousel-item">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                </div>
+                <div class="carousel-item">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#CarouselLancamentos" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#CarouselLancamentos" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Próximo</span>
             </button>
