comp. pagina para comp. header e api mockada implementada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,68 +1,3 @@
-<div class="modal fade" id="ModalLogin">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header justify-content-center"> <!-- Cabeçalho do Modal -->
-                <h4 class="modal-title">Login</h4>
-            </div>
-            <div class="modal-body"> <!-- Conteúdo do Modal -->
-                <form class="d-flex flex-column" name="formLogin" id="formLogin">
-                    <input class="form-control mb-1" type="text" name="usunome" id="usunome" placeholder="nome">
-                    <input class="form-control mb-1" type="password" name="ususenha" id="ususenha" placeholder="senha">
-                    <button class="btn btn-primary btn-block" type="submit">Login</button>
-                </form>
-                <div class="d-flex flex-column align-items-center mt-2">
-                    <div>ou</div>
-                    <button class="btn" data-bs-target="#ModalCadastro" data-bs-toggle="modal">Cadastre-se</button>
-                </div>
-            </div>
-            <div class="modal-footer"> <!-- Rodapé do Modal -->
-                <button class="btn btn-danger" type="button" data-bs-dismiss="modal">Fechar</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="ModalCadastro" aria-hidden="true" aria-labelledby="modalCadastro" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header justify-content-center"> <!-- Header -->
-                <h4 class="modal-title">Cadastro</h4>
-            </div>
-            <div class="modal-body">
-                <form class="d-flex flex-column" name="formCadastro" id="formCadastro" method="post" action="cadastrar.php">
-                    <input class="form-control mb-1" type="text" name="txtnome" id="txtnome" placeholder="nome">
-                    <input class="form-control mb-1" type="password" name="txtsenha" id="txtsenha" placeholder="senha">
-                    <button class="btn btn-primary btn-block" type="button" onclick="enviarCadastro()">Cadastre-se</button>
-                </form>
-                <div class="d-flex flex-column align-items-center mt-2">
-                    <div>ou</div>
-                    <button class="btn" data-bs-target="#ModalLogin" data-bs-toggle="modal">Fazer Login</button>
-                    <div id="mensagem"></div>
-                </div>
-            </div>
-            <div class="modal-footer"> <!-- Footer -->
-                <button class="btn btn-danger" type="button" data-bs-dismiss="modal">Fechar</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 rounded-bottom bg-white">
-        <a class="d-flex align-items-center col-md-3 mb-3 mb-md-0 text-dark text-decoration-none" href="#">
-            <img class="bi me-2" src="\assets\images\Isotipo-Spotlights-Preto.png" width="40">
-            <span class="fs-4 fw-bold">Spotlights</span>
-        </a>
-        <div class="col-12 col-md-auto mb-3 mb-md-0 justify-content-center">
-            <form class="w-100 me-5">
-                <input type="search" class="form-control" placeholder="Pesquisar" aria-label="Search">
-            </form>
-        </div>
-        <div class="col-md-3 text-end"> <!-- Botões login e cadastro -->
-            <a class="btn btn-outline-dark me-2" data-bs-toggle="modal" href="#ModalLogin" role="button">Login</a>
-            <a class="btn btn-dark" data-bs-toggle="modal" href="#ModalCadastro" role="button">Cadastre-se</a>
-        </div>
-    </header>
-</div>
+<app-header></app-header>
 
 <app-homepage></app-homepage>
