--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -1,15 +1,12 @@
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
-
-        <div class="container">
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#BarraNav">
+    <nav class="navbar navbar-expand-md navbar-light bg-light rounded" aria-label="Navbar das classificações">
+        <div class="container-fluid d-flex justify-content-center">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#BarraNav" aria-controls="BarraNav" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse justify-content-center" id="BarraNav">
-                <ul class="navbar-nav">
+            <div class="navbar-collapse collapse" id="BarraNav">
+                <ul class="navbar-nav justify-content-evenly w-100">
                     <li class="nav-item">
                         <a class="nav-link h5 mb-0" href="#">Visto</a>
                     </li>
@@ -30,9 +27,7 @@
                     </li>
                 </ul>
             </div>
-
         </div>
-
     </nav>
 
     <section class="bg-white rounded mt-2 px-3">
