--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -1,3 +1,19 @@
+<div class="modal fade" id="ModalConteudo">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" type="button" data-bs-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
 
     <nav class="navbar navbar-expand-md navbar-light bg-light rounded" aria-label="Navbar das classificações">
@@ -40,23 +56,23 @@
                 <button type="button" data-bs-target="#CarouselTop10" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner pb-3">
-                <div class="carousel-item active">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                <div class="carousel-item text-center active">
+                    <img class="img-fluid pe-auto img-top10" src="\assets\images\Exemplo-Poster-Filme.png" onclick="teste()">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
                 </div>
-                <div class="carousel-item">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                <div class="carousel-item text-center">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
                 </div>
-                <div class="carousel-item">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                <div class="carousel-item text-center">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#CarouselTop10" data-bs-slide="prev">
@@ -77,27 +93,29 @@
                 <button type="button" data-bs-target="#CarouselLancamentos" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner pb-3">
-                <div class="carousel-item active">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                <div class="carousel-item text-center active">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
                 </div>
-                <div class="carousel-item">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                <div class="carousel-item text-center">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <a href="#">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    </a>
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
                 </div>
-                <div class="carousel-item">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
-                    <img class="me-2" src="\assets\images\Exemplo-Poster-Filme.png" height="500px">
+                <div class="carousel-item text-center">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
+                    <img class="img-fluid img-top10" src="\assets\images\Exemplo-Poster-Filme.png">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#CarouselLancamentos" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="carousel-control-prev-icon"></span>
                 <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#CarouselLancamentos" data-bs-slide="next">
