iniciado modal do conteudo

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="ModalLogin">
+<div class="modal fade" id="ModalLogin" aria-hidden="true" aria-labelledby="ModalLogin" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header justify-content-center"> <!-- Cabeçalho do Modal -->
