Ponto de restauracao login e cadastro na pagina

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 
-<!--
+<!-- TESTE -->
 <div class="container bg-white mb-5">
 <h2>Cadastrar Usuario</h2>
 <hr>
@@ -89,7 +89,6 @@
     </tr>
 </table>
 </div>
--->
 
 <div class="container">
     <header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 rounded-bottom bg-white">
