Telas de login/cadastro criadas em funcionamento parcial

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -102,8 +102,9 @@
             </form>
         </div>
         <div class="col-md-3 text-end"> <!-- Botões login e cadastro -->
-            <a class="btn btn-outline-dark me-2" data-bs-toggle="modal" href="#ModalLogin" role="button">Login</a>
-            <a class="btn btn-dark" data-bs-toggle="modal" href="#ModalCadastro" role="button">Cadastre-se</a>
+            <a class="btn btn-outline-danger me-2" routerLink="/login" role="button">Sair</a>
         </div>
     </header>
 </div>
+
+<app-homepage></app-homepage>
