--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -52,6 +52,7 @@
 </div>
 
 <!-- TESTE -->
+<!--
 <div class="container bg-white mb-5">
 <h2>Cadastrar Usuario</h2>
 <hr>
@@ -89,10 +90,11 @@
     </tr>
 </table>
 </div>
+-->
 
 <div class="container">
     <header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 rounded-bottom bg-white">
-        <a class="d-flex align-items-center col-md-3 mb-3 mb-md-0 text-dark text-decoration-none" href="#">
+        <a class="d-flex align-items-center col-md-3 mb-3 mb-md-0 text-dark text-decoration-none" routerLink="/inicio">
             <img class="bi me-2" src="\assets\images\Isotipo-Spotlights-Preto.png" width="40">
             <span class="fs-4 fw-bold">Spotlights</span>
         </a>
@@ -102,9 +104,50 @@
             </form>
         </div>
         <div class="col-md-3 text-end"> <!-- Botões login e cadastro -->
-            <a class="btn btn-outline-danger me-2" routerLink="/login" role="button">Sair</a>
+            <div class="dropdown">
+                <button class="btn btn-outline-dark dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                  {{substituir.nome}}
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                    <li><a class="dropdown-item" routerLink="/inicio">Início</a></li>
+                    <li><a class="dropdown-item" routerLink="/inicio/perfil">Perfil</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item text-danger" routerLink="/login">Sair</a></li>
+                </ul>
+              </div>
         </div>
     </header>
+
+    <nav class="navbar navbar-expand-md navbar-light bg-light rounded" aria-label="Navbar das classificações">
+        <div class="container-fluid d-flex justify-content-center">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#BarraNav" aria-controls="BarraNav" aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="BarraNav">
+                <ul class="navbar-nav justify-content-evenly w-100">
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Visto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Vendo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Quero ver</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Abandonados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Guilty Pleasure</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h5 mb-0" href="#">Favoritos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
 </div>
 
-<app-homepage></app-homepage>
+<router-outlet></router-outlet>
