--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -1,3 +1,4 @@
+<!-- MODAL FILMES/SÉRIES -->
 <div class="modal fade" id="ModalConteudo">
     <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
@@ -59,36 +60,6 @@
 </div>
 
 <div class="container">
-
-    <nav class="navbar navbar-expand-md navbar-light bg-light rounded" aria-label="Navbar das classificações">
-        <div class="container-fluid d-flex justify-content-center">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#BarraNav" aria-controls="BarraNav" aria-expanded="false">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="BarraNav">
-                <ul class="navbar-nav justify-content-evenly w-100">
-                    <li class="nav-item">
-                        <a class="nav-link h5 mb-0" href="#">Visto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link h5 mb-0" href="#">Vendo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link h5 mb-0" href="#">Quero ver</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link h5 mb-0" href="#">Abandonados</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link h5 mb-0" href="#">Guilty Pleasure</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link h5 mb-0" href="#">Favoritos</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <section class="bg-white rounded mt-2 px-3">
 
