Adicionado opcao radio para botoes de classificacao

--- a/src/app/componentes/homepage/homepage.component.html
+++ b/src/app/componentes/homepage/homepage.component.html
@@ -34,11 +34,16 @@
                         <div class="row">
                                 <div class="col">
                                     <div class="d-flex justify-content-evenly">
-                                        <button class="btn btn-outline-secondary rounded-pill" data-bs-toggle="button">visto</button>
-                                        <button class="btn btn-outline-secondary rounded-pill" data-bs-toggle="button">vendo</button>
-                                        <button class="btn btn-outline-secondary rounded-pill" data-bs-toggle="button">quero ver</button>
-                                        <button class="btn btn-outline-secondary rounded-pill" data-bs-toggle="button">abandonei</button>
-                                        <button class="btn btn-outline-secondary rounded-pill" data-bs-toggle="button">guilty pleasure</button>
+                                        <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off">
+                                        <label class="btn btn-outline-secondary rounded-pill" for="option1">visto</label>
+                                        <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
+                                        <label class="btn btn-outline-secondary rounded-pill" for="option2">vendo</label>
+                                        <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
+                                        <label class="btn btn-outline-secondary rounded-pill" for="option3">quero ver</label>
+                                        <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off">
+                                        <label class="btn btn-outline-secondary rounded-pill" for="option4">abandonei</label>
+                                        <input type="radio" class="btn-check" name="options" id="option5" autocomplete="off">
+                                        <label class="btn btn-outline-secondary rounded-pill" for="option5">guilty pleasure</label>
                                     </div>
                                 </div>
                         </div>
