--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -10,13 +10,15 @@
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label fonte-fundo">Endereço de E-mail</label>
                       <input class="form-control" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName="email">
-                      <div id="emailHelp" class="form-text">Nunca iremos compartilhar seu e-mail com ninguém</div>
+                      <div id="emailHelp" class="form-text">Nunca iremos compartilhar seu e-mail com ninguém</div><br>
+                      <span class="text-danger" *ngIf="loginForm.controls['email'].dirty && loginForm.hasError('required','email')">*E-mail é obrigatório</span>
                     </div>
                     <div class="mb-3">
                       <label for="exampleInputPassword1" class="form-label fonte-fundo">Senha</label>
                       <input type="password" class="form-control" id="exampleInputPassword1" formControlName="senha">
+                      <span class="text-danger" *ngIf="loginForm.controls['senha'].dirty && loginForm.hasError('required','senha')">*Senha é obrigatória</span>
                     </div>
-                    <button class="btn btn-primary btn-block" type="submit">Login</button>
+                    <button class="btn btn-primary btn-block" [disabled]="!loginForm.valid" type="submit">Login</button>
                   </form>
                   <a class="mt-3" style="color: rgb(50, 50, 50);" routerLink="/cadastro">ou faça seu cadastro</a>
             </div>
