--- a/src/app/componentes/cadastro/cadastro.component.html
+++ b/src/app/componentes/cadastro/cadastro.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <div class="card card-registro">
+      <div class="card card-registro shadow">
         <div class="text-center">
           <h1 class="fonte-fundo">Cadastro</h1>
           <h6 class="fonte-fundo">Registre-se com seu e-mail e senha</h6>
