--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,8 @@ body, html {
 body {
     background-color: rgb(50, 50, 50);
 }
+
+.titulos {
+    font-size: 1.8rem;
+    font-family: 'Montserrat', sans-serif;
+}
